feat: added option to write grouped OBDS messages back to Kafka